# sr71-kurumi

./: .gitignore  Cargo.toml  README.md
docs/: ARCHITECTURE.md
kurumi-deamon/: Cargo.toml
kurumi-deamon/src/: ipc.rs  main.rs
kurumi-deamon/src/hooks/: time.rs
sr71-core/: Cargo.toml
sr71-core/src/: anime.rs  emote.rs  lib.rs  protocol.rs
sr71-ctl/: Cargo.toml
sr71-ctl/src/: main.rs
